# auto-install-openclaw

./: .gitignore  LICENSE  README.ko.md  README.md  SPEC.md  package.json
.github/workflows/: release.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: github.rs  installer.rs  lib.rs  main.rs  node.rs
